# filters

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
benchmark/: blocked_bloom_filter_bench.c  bloom_filter_bench.c
devtools/: gen_compile_db.sh
include/: blocked_bloom_filter.h  bloom_filter.h  filters_define.h
src/: blocked_bloom_filter.c  bloom_filter.c
